--- a/catalog.html
+++ b/catalog.html
@@ -16,56 +16,60 @@
 
   <header class="main-header">
     <div class="header-menu-bar">
-      <div class="header-menu">
-        <a class="logo main-header-logo" href="index.html">Техномарт</a>
-        <form class="search-form" action="#" method="POST">
-          <input class="search" type="text" name="search" value="Поиск:">
-        </form>
-        <a class="menu-button" href="blank.html">Закладки: 0</a>
-        <a class="menu-button cart not-empty-cart" href="blank.html">Корзина: 10</a>
-        <a class="order-button" href="blank.html">Оформить заказ</a>
+      <div class="center">
+        <div class="header-menu">
+          <a class="logo main-header-logo" href="index.html">Техномарт</a>
+          <form class="search-form" action="#" method="POST">
+            <input class="search" type="text" name="search" value="Поиск:">
+          </form>
+          <a class="menu-button" href="blank.html">Закладки: 0</a>
+          <a class="menu-button cart not-empty-cart" href="blank.html">Корзина: 10</a>
+          <a class="order-button" href="blank.html">Оформить заказ</a>
+        </div>
       </div>
     </div>
     <div class="header-navigation-bar">
-      <div class="user-menu">
-        <p class="logo-text"><i>Интернет магазин<br>
-            строительных материалов<br>
-            и инструментов для ремонта</i></p>
-        <div class="header-contacts">
-          <a class="header-phone" href="tel:+78125550555"> +7 (812) 555-05-55</a>
-          <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+      <div class="center">
+        <div class="user-menu">
+          <p class="logo-text"><i>Интернет магазин<br>
+              строительных материалов<br>
+              и инструментов для ремонта</i></p>
+          <div class="header-contacts">
+            <a class="header-phone" href="tel:+78125550555"> +7 (812) 555-05-55</a>
+            <p class="header-address">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
+          </div>
+          <div class="user-navigation">
+            <a class="user-account user-link" href="blank.html">Равшан Джамшутович</a>
+            <a href="blank.html">Мои заказы</a>
+            <a href="blank.html">Личный кабинет</a>
+          </div>
         </div>
-        <div class="user-navigation">
-          <a class="user-account user-link" href="blank.html">Равшан Джамшутович</a>
-          <a href="blank.html">Мои заказы</a>
-          <a href="blank.html">Личный кабинет</a>
-        </div>
+        <nav class="main-navigation">
+          <ul class="header-navigation">
+            <li>
+              <a href="index.html">Главная</a>
+            </li>
+            <li>
+              <a href="blank.html">Компания</a>
+            </li>
+            <li>
+              <a href="#">Каталог</a>
+            </li>
+            <li>
+              <a href="blank.html">Новости</a>
+            </li>
+            <li>
+              <a href="blank.html">Спецпредложения</a>
+            </li>
+            <li>
+              <a href="blank.html">Доставка</a>
+            </li>
+            <li>
+              <a href="blank.html">Контакты</a>
+            </li>
+          </ul>
+        </nav>
       </div>
-      <nav class="main-navigation">
-        <ul class="site-navigation">
-          <li>
-            <a href="index.html">Главная</a>
-          </li>
-          <li>
-            <a href="blank.html">Компания</a>
-          </li>
-          <li>
-            <a href="#">Каталог</a>
-          </li>
-          <li>
-            <a href="blank.html">Новости</a>
-          </li>
-          <li>
-            <a href="blank.html">Спецпредложения</a>
-          </li>
-          <li>
-            <a href="blank.html">Доставка</a>
-          </li>
-          <li>
-            <a href="blank.html">Контакты</a>
-          </li>
-        </ul>
-      </nav>
     </div>
   </header>
   <main class="container inner-page">
@@ -298,72 +302,77 @@
 
   <footer class="main-footer">
     <div class="footer-bar">
-      <div class="footer-navigation site-navigation">
-        <a class="logo main-footer-logo" href="#">Техномарт</a>
-        <ul class="footer-navigation-list">
-          <li>
-            <a href="#">Компания</a>
-          </li>
-          <li>
-            <a href="blank.html">Новости</a>
-          </li>
-          <li>
-            <a href="catalog.html">Каталог</a>
-          </li>
-          <li>
-            <a href="blank.html">Доставка</a>
-          </li>
-          <li>
-            <a href="blank.html">Контакты</a>
-          </li>
-        </ul>
-      </div>
-      <div class="footer-address">
-        <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
-        <a class="footer-phone" href="tel:+78125550555"> +7 (812) 555-05-55</a>
-        <ul class="footer-services-list">
-          <li>
-            <a href="blank.html">Материалы</a>
-          </li>
-          <li>
-            <a href="blank.html">Техника</a>
-          </li>
-          <li>
-            <a href="blank.html">Инструмент</a>
-          </li>
-          <li>
-            <a href="blank.html">Спецпредложения</a>
-          </li>
-        </ul>
-      </div>
-    </div>
-    <div class="footer-social-bar">
-      <div class="footer-copyright">
-        <div class="copyright">
-          <p>© 2010-2019 Компания "Техномарт"<br>
-            Все права защищены</p>
-        </div>
-        <div class="footer-social">
-          <ul>
+      <div class="center">
+        <div class="footer-navigation">
+          <a class="logo main-footer-logo" href="#">Техномарт</a>
+          <ul class="footer-navigation-list">
             <li>
-              <a class="social-button" href="#">вконтакте</a>
+              <a href="#">Компания</a>
             </li>
             <li>
-              <a class="social-button" href="#">фейсбук</a>
+              <a href="blank.html">Новости</a>
             </li>
             <li>
-              <a class="social-button" href="#">инстаграм</a>
+              <a href="catalog.html">Каталог</a>
+            </li>
+            <li>
+              <a href="blank.html">Доставка</a>
+            </li>
+            <li>
+              <a href="blank.html">Контакты</a>
             </li>
           </ul>
         </div>
-        <div class="footer-links">
-          <div>
-            <p>Обратная связь:</p>
-            <a href="email:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+        <div class="footer-address">
+          <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+            <a class="footer-phone" href="tel:+78125550555"> +7 (812) 555-05-55</a>
+          </p>
+          <ul class="footer-services-list">
+            <li>
+              <a href="blank.html">Материалы</a>
+            </li>
+            <li>
+              <a href="blank.html">Техника</a>
+            </li>
+            <li>
+              <a href="blank.html">Инструмент</a>
+            </li>
+            <li>
+              <a href="blank.html">Спецпредложения</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </div>
+    <div class="footer-social-bar">
+      <div class="center">
+        <div class="footer-copyright">
+          <div class="copyright">
+            <p>© 2010-2019 Компания "Техномарт"<br>
+              Все права защищены</p>
           </div>
-          <div>
-            <p>Разработано -</p>
-            <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+          <div class="footer-social">
+            <ul>
+              <li>
+                <a class="social-button" href="#">вконтакте</a>
+              </li>
+              <li>
+                <a class="social-button" href="#">фейсбук</a>
+              </li>
+              <li>
+                <a class="social-button" href="#">инстаграм</a>
+              </li>
+            </ul>
+          </div>
+          <div class="footer-links">
+            <div>
+              <p>Обратная связь:</p>
+              <a href="email:mail@htmlacademy.ru">mail@htmlacademy.ru</a>
+            </div>
+            <div>
+              <p>Разработано -</p>
+              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a>
+            </div>
           </div>
         </div>
       </div>
